--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#giftcards">Gift Cards</a></li>
                 <li><a href="#carta-masajes">Carta de Masajes</a></li>
+                <li><a href="#tienda">Tienda</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -38,42 +39,59 @@
 
         <div class="service">
             <img src="images/masaje prenatal - portada.jpeg" alt="Masaje Prenatal y Postparto">
-            <h3>Masaje Prenatal y Postparto</h3>
-            <p>Sesiones disponibles de 1:00 hs y 1:30 hs.</p>
-            <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Prenatal%20y%20Postparto" class="btn">Consultar</a>
+            <div class="service-text">
+                <h3>Masaje Prenatal y Postparto</h3>
+                <p>Sesiones disponibles de 1:00 hs y 1:30 hs.</p>
+                <p>Este masaje está diseñado para ofrecer un espacio de relajación, alivio y conexión tanto para la mamá como para el bebé. Ayuda a aliviar tensiones en la espalda baja, piernas y cuello, y mejora la circulación reduciendo la retención de líquidos.</p>
+                <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Prenatal%20y%20Postparto" class="btn">Consultar</a>
+            </div>
         </div>
 
         <div class="service">
             <img src="images/reflexologia integral ayurveda - portada.jpeg" alt="Reflexología Integral Ayurveda">
-            <h3>Reflexología Integral Ayurveda</h3>
-            <p>Duración: 1:00 hs. Equilibra tu energía con la reflexología ayurvédica.</p>
-            <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Reflexología%20Integral%20Ayurveda" class="btn">Consultar</a>
+            <div class="service-text">
+                <h3>Reflexología Integral Ayurveda</h3>
+                <p>Duración: 1:00 hs. Equilibra tu energía con la reflexología ayurvédica.</p>
+                <p>Este tratamiento trabaja puntos energéticos en los pies que influyen en todo el cuerpo, ayudando a mejorar la circulación y el equilibrio interno.</p>
+                <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Reflexología%20Integral%20Ayurveda" class="btn">Consultar</a>
+            </div>
         </div>
 
         <div class="service">
             <img src="images/masaje abhyanga & marma terapia - portada.jpeg" alt="Sesión Ayurveda Abhyanga y Marma Terapia">
-            <h3>Sesión Ayurveda Abhyanga y Marma Terapia</h3>
-            <p>Duración: 1:30 hs. Un masaje ayurvédico que revitaliza cuerpo y mente.</p>
-            <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Abhyanga%20y%20Marma%20Terapia" class="btn">Consultar</a>
+            <div class="service-text">
+                <h3>Sesión Ayurveda Abhyanga y Marma Terapia</h3>
+                <p>Duración: 1:30 hs. Un masaje ayurvédico que revitaliza cuerpo y mente.</p>
+                <p>Utiliza aceites herbales calientes y técnicas específicas para estimular los puntos Marma, promoviendo la relajación profunda y el equilibrio energético.</p>
+                <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Abhyanga%20y%20Marma%20Terapia" class="btn">Consultar</a>
+            </div>
         </div>
 
         <div class="service">
             <img src="images/masaje desintoxicante - portada.jpeg" alt="Masaje Desintoxicante Ayurveda">
-            <h3>Masaje Desintoxicante Ayurveda</h3>
-            <p>Duración: 2:30 hs. Terapia profunda para eliminar toxinas del cuerpo.</p>
-            <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Desintoxicante%20Ayurveda" class="btn">Consultar</a>
+            <div class="service-text">
+                <h3>Masaje Desintoxicante Ayurveda</h3>
+                <p>Duración: 2:30 hs. Terapia profunda para eliminar toxinas del cuerpo.</p>
+                <p>Mediante técnicas de drenaje linfático y aceites medicinales, este masaje ayuda a eliminar toxinas, mejorar la circulación y fortalecer el sistema inmunológico.</p>
+                <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Desintoxicante%20Ayurveda" class="btn">Consultar</a>
+            </div>
         </div>
 
         <div class="service">
-            <h3>Masaje Relajante y Descontracturante</h3>
-            <p>Duración: 1:00 hs. Un masaje integral con técnicas para relajar el cuerpo.</p>
-            <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Relajante%20y%20Descontracturante" class="btn">Consultar</a>
+            <img src="images/masaje relajante y descontracturante - portada.jpeg" alt="Masaje Relajante y Descontracturante">
+            <div class="service-text">
+                <h3>Masaje Relajante y Descontracturante</h3>
+                <p>Duración: 1:00 hs. Un masaje integral con técnicas para relajar el cuerpo.</p>
+                <p>Se utilizan técnicas de presión y estiramiento para aliviar tensiones musculares y promover una sensación de bienestar general.</p>
+                <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Relajante%20y%20Descontracturante" class="btn">Consultar</a>
+            </div>
         </div>
+
     </section>
 
     <section id="tienda">
         <h2>Tienda Holística Raíz</h2>
-        <img src="images/tienda holistica raiz.jpeg" alt="Tienda Holística Raíz">
+        <p><a href="https://www.instagram.com/stories/masajes.raiz/"><img src="images/tienda holistica raiz.jpeg" alt="Tienda Holística Raíz"></a></p>
     </section>
 
     <section id="contacto" class="contact">
