--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masajes Bienestar</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
-        <p class='logo'>Movimiento Raíz</p>
+        <p class="logo"><a href="#logo-section">Movimiento Raíz</a></p>
+        <button class="menu-toggle">&#9776;</button> <!-- Ícono de menú hamburguesa -->
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#giftcards">Gift Cards</a></li>
                 <li><a href="#carta-masajes">Carta de Masajes</a></li>
                 <li><a href="#tienda">Tienda</a></li>
@@ -18,6 +20,8 @@
             </ul>
         </nav>
     </header>
+
+    <section id="separacion"></section>
 
     <!-- <section class="hero">
         <h1>Bienvenidos a Masajes Bienestar</h1>
@@ -31,7 +35,7 @@
     <section id="giftcards" class="giftcards">
         <h2>Regala Bienestar</h2>
         <p>Regala una experiencia de relajación y bienestar con nuestras terapias de masajes.</p>
-        <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quiero%20una%20tarjeta%20de%20regalo!" class="btn">Solicitar Gift Card</a>
+        <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quiero%20una%20tarjeta%20de%20regalo!" class="btn">Regalar</a>
     </section>
 
     <section id="carta-masajes" class="services">
