--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -33,9 +33,16 @@
     </section>
 
     <section id="giftcards" class="giftcards">
-        <h2>Regala Bienestar</h2>
-        <p>Regala una experiencia de relajación y bienestar con nuestras terapias de masajes.</p>
-        <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quiero%20una%20tarjeta%20de%20regalo!" class="btn">Regalar</a>
+        <div class="giftcards-content">
+            <div class="giftcards-text">
+                <h2>Regala Bienestar</h2>
+                <p>Regala una experiencia de relajación y bienestar con nuestras terapias de masajes.</p>
+                <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quiero%20una%20tarjeta%20de%20regalo!" class="btn">Regalar</a>
+            </div>
+            <div class="giftcards-image">
+                <img src="images/decorado 1.jpeg" alt="Gift Card de Masajes">
+            </div>
+        </div>
     </section>
 
     <section id="carta-masajes" class="services">
