--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masajes Bienestar</title>
+    <title>Masajes Raíz</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
@@ -24,7 +24,7 @@
     <section id="separacion"></section>
 
     <!-- <section class="hero">
-        <h1>Bienvenidos a Masajes Bienestar</h1>
+        <h1>Bienvenidos a Masajes Raíz</h1>
         <p>Relájate, renueva tu energía y cuida tu cuerpo con nuestras terapias especializadas.</p>
     </section> -->
 
