muevo a la raiz

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <p class="logo"><a href="#logo-section">Movimiento Raíz</a></p>
+        <p class="logo"><a href="#portada">Movimiento Raíz</a></p>
         <button class="menu-toggle">&#9776;</button> <!-- Ícono de menú hamburguesa -->
         <nav>
             <ul class="nav-links">
@@ -23,14 +23,14 @@
 
     <section id="separacion"></section>
 
-    <!-- <section class="hero">
+    <section id="portada" class="hero">
         <h1>Bienvenidos a Masajes Raíz</h1>
         <p>Relájate, renueva tu energía y cuida tu cuerpo con nuestras terapias especializadas.</p>
-    </section> -->
-
-    <section id="logo-section" class="logo-section">
-        <img src="images/logotipo.jpeg" alt="Logo de la Empresa" class="full-logo">
     </section>
+
+    <!-- <section id="logo-section" class="logo-section">
+        <img src="images/logotipo.jpeg" alt="Logo de la Empresa" class="full-logo">
+    </section> -->
 
     <section id="giftcards" class="giftcards">
         <div class="giftcards-content">
