--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <section id="separacion"></section>
 
     <section id="portada" class="hero">
-        <h1>Bienvenidos a Masajes Raíz</h1>
-        <p>Relájate, renueva tu energía y cuida tu cuerpo con nuestras terapias especializadas.</p>
+        <!-- <h1>Bienvenidos a Masajes Raíz</h1>
+        <p>Relájate, renueva tu energía y cuida tu cuerpo con nuestras terapias especializadas.</p> -->
     </section>
 
     <!-- <section id="logo-section" class="logo-section">
