Actualizacion de cartilla de masajes

--- a/index.html
+++ b/index.html
@@ -49,36 +49,47 @@
         <h2>Nuestra Carta de Masajes</h2>
 
         <div class="service">
-            <img src="images/masaje prenatal - portada.jpeg" alt="Masaje Prenatal y Postparto">
+            <img src="images/masaje prenatal - portada.jpg" alt="Masaje Prenatal y Postparto">
             <div class="service-text">
                 <h3>Masaje Prenatal y Postparto</h3>
-                <p>Sesiones disponibles de 1:00 hs y 1:30 hs.</p>
-                <p>Este masaje está diseñado para ofrecer un espacio de relajación, alivio y conexión tanto para la mamá como para el bebé. Ayuda a aliviar tensiones en la espalda baja, piernas y cuello, y mejora la circulación reduciendo la retención de líquidos.</p>
+                <p>Duración: Sesiones disponibles de 1:00 hs y 1:30 hs.</p>
+                <p>¿Cómo funciona esta sesión?El embarazo es un momento único y transformador, y también una etapa en la que el cuerpo necesita cuidados específicos. El masaje prenatal Raíz está diseñado para ofrecer un espacio de relajación, alivio y conexión tanto para la mamá como para el bebé.En esta sesión, trabajamos con técnicas suaves y adaptadas a cada etapa del embarazo.</p>
+                <p>Ayudamos a aliviar tensiones en zonas clave como la espalda baja, las piernas y el cuello.</p>
+                <p>Utilizamos movimientos drenantes para reducir la retención de líquidos y mejorar la circulación, promoviendo una sensación de ligereza y bienestar.</p>
+                <p>Además, cada detalle de esta experiencia está pensado para tu comodidad: desde la posición en la camilla hasta el uso de aceites vegetales seguros para esta etapa. Este masaje no solo cuida tu cuerpo, sino que también favorece un estado de calma y conexión con tu bebé, fortaleciendo ese vínculo tan especial.</p>
                 <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Prenatal%20y%20Postparto" class="btn">Consultar</a>
             </div>
         </div>
 
         <div class="service">
-            <img src="images/reflexologia integral ayurveda - portada.jpeg" alt="Reflexología Integral Ayurveda">
+            <img src="images/reflexologia integral ayurveda - portada.jpg" alt="Reflexología Integral Ayurveda">
             <div class="service-text">
                 <h3>Reflexología Integral Ayurveda</h3>
                 <p>Duración: 1:00 hs. Equilibra tu energía con la reflexología ayurvédica.</p>
-                <p>Este tratamiento trabaja puntos energéticos en los pies que influyen en todo el cuerpo, ayudando a mejorar la circulación y el equilibrio interno.</p>
+                <p>Este masaje es ideal para personas que buscan:
+                    <ul>Reducir el estrés y las tensiones acumuladas.
+                        <li>Mejorar la circulación y el funcionamiento de los órganos internos.</li>
+                        <li>Equilibrar las emociones y promover un estado de calma profunda.</li>
+                        <li>Reconectar con el cuerpo desde una perspectiva holística.</li>
+                    </ul>
+                <p>La reflexología ayurvédica no solo alivia el cuerpo, sino que también lo escucha. Es una invitación a detenerte, sentir tus raíces y permitir que la energía fluya nuevamente.</p>
                 <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Reflexología%20Integral%20Ayurveda" class="btn">Consultar</a>
             </div>
         </div>
 
         <div class="service">
-            <img src="images/masaje abhyanga & marma terapia - portada.jpeg" alt="Sesión Ayurveda Abhyanga y Marma Terapia">
+            <img src="images/masaje abhyanga & marma terapia - portada.jpg" alt="Sesión Ayurveda Abhyanga y Marma Terapia">
             <div class="service-text">
                 <h3>Sesión Ayurveda Abhyanga y Marma Terapia</h3>
-                <p>Duración: 1:30 hs. Un masaje ayurvédico que revitaliza cuerpo y mente.</p>
-                <p>Utiliza aceites herbales calientes y técnicas específicas para estimular los puntos Marma, promoviendo la relajación profunda y el equilibrio energético.</p>
+                <p>Duración: Sesiones disponibles de 1:30 hs y 2:30 hs.</p>
+                <p>¿Qué es el masaje Abhyanga? El Abhyanga es mucho más que un masaje, es un ritual de cuidado y conexión con el cuerpo. En esta técnica, se pueden aplicar aceites vegetales tibios, otras infusionados con hierbas específicas, que penetran profundamente en la piel (el órgano más grande del cuerpo). Los aceites no solo nutren tus tejidos y mejoran la circulación, sino que también ayudan a eliminar toxinas a través de los canales energéticos llamados srotas.</p>
+                <p>El Abhyanga se realiza con movimientos largos y envolventes que simulan el fluir del agua, calmando el sistema nervioso, reduciendo la fatiga mental y revitalizando el cuerpo. ¿Qué es la Marma Terapia?La Marma Terapia complementa el masaje Abhyanga con un enfoque más específico. En el cuerpo existen 107 puntos Marma, que son nodos donde se cruzan energías vitales, tejidos y emociones. Estas zonas son como "puertas" entre el cuerpo físico y la mente.</p>
+                <p>Durante la sesión, se aplica presión sutil en puntos clave para desbloquear tensiones, liberar energía estancada y permitir que el Prana (energía vital) fluya libremente. Es ideal para personas que sienten bloqueos emocionales o físicos y necesitan reconectarse con su centro.</p>
                 <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Abhyanga%20y%20Marma%20Terapia" class="btn">Consultar</a>
             </div>
         </div>
 
-        <div class="service">
+        <!-- <div class="service">
             <img src="images/masaje desintoxicante - portada.jpeg" alt="Masaje Desintoxicante Ayurveda">
             <div class="service-text">
                 <h3>Masaje Desintoxicante Ayurveda</h3>
@@ -86,14 +97,15 @@
                 <p>Mediante técnicas de drenaje linfático y aceites medicinales, este masaje ayuda a eliminar toxinas, mejorar la circulación y fortalecer el sistema inmunológico.</p>
                 <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Desintoxicante%20Ayurveda" class="btn">Consultar</a>
             </div>
-        </div>
+        </div> -->
 
         <div class="service">
-            <img src="images/masaje relajante y descontracturante - portada.jpeg" alt="Masaje Relajante y Descontracturante">
+            <img src="images/masaje relajante y descontracturante - portada.jpg" alt="Masaje Relajante y Descontracturante">
             <div class="service-text">
                 <h3>Masaje Relajante y Descontracturante</h3>
                 <p>Duración: 1:00 hs. Un masaje integral con técnicas para relajar el cuerpo.</p>
-                <p>Se utilizan técnicas de presión y estiramiento para aliviar tensiones musculares y promover una sensación de bienestar general.</p>
+                <p>¿Cómo funciona esta sesión? </p>
+                <p>Durante 60 minutos, trabajamos puntos reflejos tanto en los pies como en la cabeza y el rostro. En los pies, se aplica presión específica para estimular órganos clave, liberar toxinas y mejorar el flujo energético. En la cabeza y el rostro, los movi La reflexología es una técnica ancestral que considera a los pies y la cabeza como mapas completos del cuerpo humano. Según el Ayurveda, cada punto en los pies y la cabeza está conectado con órganos, sistemas y emociones específicas. Trabajando estas zonas, es posible desbloquear tensiones, estimular la energía vital (Prana) y promover un equilibrio integral.mientos son más suaves, ayudando a relajar el sistema nervioso, liberar tensiones musculares y calmar la mente.</p>
                 <a target="_blank" href="https://wa.me/5492477662848?text=Hola!%20quisiera%20mas%20información%20sobre%20el%20masaje%20Relajante%20y%20Descontracturante" class="btn">Consultar</a>
             </div>
         </div>
