Logo de tienda actualizada

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <section id="tienda">
         <h2>Tienda Holística Raíz</h2>
-        <p><a href="https://www.instagram.com/stories/masajes.raiz/"><img src="images/tienda holistica raiz.jpeg" alt="Tienda Holística Raíz"></a></p>
+        <p><a target="_blank" href="https://www.instagram.com/stories/masajes.raiz/"><img src="images/tienda holistica raiz.png" alt="Tienda Holística Raíz"></a></p>
     </section>
 
     <section id="contacto" class="contact">
